Update style to fix overlap error when clicking to add a layer

--- a/css/style2.css
+++ b/css/style2.css
@@ -298,7 +298,7 @@ input.round        { border-radius:4px; }
 .modal:target ~ .mask { display:block; }
 
 .status { font-weight:normal; }
-.active + .hidden { display:block; }
+.active + .hidden { display:inline-flex; width: 100%;}
 
 /* Importing Interactions */
 .controller {
@@ -315,10 +315,12 @@ input.round        { border-radius:4px; }
     .controller .action:hover   { background-color:#fff; }
     .controller .action.active  { background-color:#333; border-radius:0 4px 0 0; }
 
-.palette a { width:40px; height:38px; }
+.palette { width: 284px;}
+.palette a { width:40px; height:40px;}
 .palette, .palette a { border-color:#444; }
 .palette a:first-child { border-radius:4px 0 0 4px; }
 .palette a:last-child { border-radius:0 4px 4px 0; border:none; }
+._osm {margin-left: 2px;}
 
 .palette a.active { box-shadow:inset 0 0 0 4px rgba(0,0,0,0.25); }
 
